added contact page

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/raleway": "^4.5.0",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.3.4",
     "gatsby": "^4.0.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
