--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-transformer-sharp": "^4.0.0",
     "git": "^0.1.5",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.27.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
