--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pure-react-carousel": "^1.27.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
