--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
-    "gatsby": "^4.0.0",
+    "gatsby": "^4.4.0",
+    "gatsby-cli": "^4.4.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
@@ -25,7 +26,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "swiper": "^7.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
