--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "@fontsource/raleway": "^4.5.0",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/forms": "^0.3.4",
     "gatsby": "^4.4.0",
     "gatsby-cli": "^4.4.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
@@ -30,11 +29,11 @@
     "swiper": "^7.3.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.7",
-    "gatsby-plugin-postcss": "^5.0.0",
-    "postcss": "^8.3.11",
+    "autoprefixer": "^10.4.0",
+    "gatsby-plugin-postcss": "^5.4.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^3.0.7"
   },
   "keywords": [
     "gatsby"
